--- a/app/src/main/res/layout/fragment_name.xml
+++ b/app/src/main/res/layout/fragment_name.xml
@@ -3,14 +3,16 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorAccent"
-    tools:context=".FirstFragment">
+    android:background="#4CAF50"
+    tools:context=".NameFragment">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
+        android:id="@+id/fragment_tv_name"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@color/colorPrimary"
-        android:text="@string/hello_blank_fragment" />
+        android:layout_height="wrap_content"
+        android:text="@string/hello_blank_fragment"
+        android:textColor="#ffffff"
+        android:textSize="30sp" />
 
 </FrameLayout>
