--- a/app/src/main/res/layout/fragment_name.xml
+++ b/app/src/main/res/layout/fragment_name.xml
@@ -6,13 +6,12 @@
     android:background="#4CAF50"
     tools:context=".NameFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:id="@+id/fragment_tv_name"
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/main_rv"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/hello_blank_fragment"
-        android:textColor="#ffffff"
-        android:textSize="30sp" />
+        android:layout_height="match_parent"
+         />
+    <!-- TODO: Update blank fragment layout -->
+
 
 </FrameLayout>
