--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,13 +14,10 @@
         android:layout_height="0dp"
         android:layout_weight="1" />
 
-    <TextView
-        android:id="@+id/main_tv"
+    <fragment
+        android:id="@+id/text_fragment"
+        android:name="com.example.testfragment.TextFragment"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1"
-        android:background="#304FFE"
-        android:text="hello_blank_activity"
-        android:textColor="#fff"
-        android:textSize="30sp" />
+        android:layout_weight="1" />
 </LinearLayout>
